--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <hr/>
         <h2>Objective</h2>
         <p>Looking forward for an opportunity where I can bring the best out of my own self. I would like to work in an environment where each day seems like a new day with a new skill learnt. </p>
+        <hr/>
         <h2>Education</h2>
         <ul>
             <li>UG, Pursuing my BE program at Nagarjuna College of Engineering and Technology, Banglore</li>
@@ -23,13 +24,20 @@
             <li>SSLC, Completed my schooling at Poornaprajna Education Centre, Banglore</li>
             <p>2018</p>
         </ul>
+        <hr/>
         <h2>Skills</h2>
         <ul>
             <li>C</li>
             <li>HTML</li>
         </ul>
-        <h2><a href="./hobbies.html">Hobbies</a></h2>
-        <h2><a href="./contactme.html">Contact Me</a></h2>
+        <hr/>
+        <h2>Others</h2>
+        <ul>
+            <li><a href="./hobbies.html">Hobbies</a></li>
+            <li><a href="./contactme.html">Contact Me</a></li>
+        </ul>
+        <hr/>
+        
         <footer>Shri Nithya M</footer>
     </body>
 </html>
